@@ -1,6 +1,4 @@
 Changes to Version 3.0-11
-
-  o vcov. argument now works with Anova for mer-type models.
   
   o boxCox() function now allows the use of any of the usual graphics parameters in the plot() function.  If particuar boxCox(model, main="my title") will add a title to the plot, and boxCox(model, main="") will suppress it.
   
@@ -20,11 +18,15 @@ Changes to Version 3.0-11
   
   o Regularize handling of vcov. argument in Anova() and linearHypothesis().
   
+  o vcov. argument now works with Anova() for models produced by lme4::lmer() and glmer(), (fixing a bug reported by Amy MacDougall).
+  
   o New linearHypothesis.lmList() method.
   
   o New "lm" method for symbox().
   
   o New cex and pt.wts arguments for avPlot() "lm" and "glm" methods, and for mcPlot.lm().
+  
+  o Fix handling of imatrix argument to Anova.mlm() (suggestion of Benedikt Langenberg).
   
   o Rewrite "embedding" vignette.
   
